# audio-transcription

./: .env-example  README.md  pyproject.toml  requirements.txt  transcript.py
audio_transcription/: cli.py  config.py  io_config.py  output.py  pipeline.py
